# Bre

Bre/app/: build.gradle
Bre/app/jni/: Application.mk  CMakeLists.txt
Bre/app/jni/SDL/include/SDL3/: SDL_system.h
Bre/app/jni/SDL/src/render/direct3d/: SDL_render_d3d.c
Bre/app/jni/SDL/src/test/: SDL_test_common.c
Bre/app/jni/SDL/src/video/: SDL_video_unsupported.c
Bre/app/jni/SDL_image/: Android.mk
Bre/app/jni/src/: Android.mk  CMakeLists.txt  Cronometro.h  Cronometro.hpp  FPS.h  Main.cpp  Main.h  SDLFreccia.h  SDLFunzioni.h  SDLPausa.h  YourSourceHere.c  main_vecchio.cpp
Bre/app/jni/src/activities/: GameActivity.hpp
Bre/app/jni/src/controller/: GameController.hpp
Bre/app/jni/src/controller/components/: Point2D.hpp  Rectangle.hpp  StopWatch.hpp  TouchInputType.hpp  Vector2D.hpp
Bre/app/jni/src/controller/systems/: ClonesSystem.hpp  InGameEventsSystem.hpp  InGameInputSystem.hpp  MovementSystem.hpp
Bre/app/jni/src/controller/utils/: StopWatch.hpp
Bre/app/jni/src/controllers/: GameController.hpp
Bre/app/jni/src/entities/: Player.hpp
Bre/app/jni/src/model/: Clone.h
Bre/app/jni/src/model/entities/: Arrow.hpp  Clone.hpp  Game.hpp  Player.hpp  TouchInput.hpp
Bre/app/jni/src/model/states/: GameState.hpp  PlayerState.hpp
Bre/app/jni/src/model/worlds/: FreePlayWorld.hpp  World.hpp
Bre/app/jni/src/view/: Mediator.hpp
Bre/app/jni/src/view/activities/: FreePlayActivity.hpp  GameActivity.hpp
Bre/app/jni/src/view/renderers/: ArrowJoystickRenderer.hpp  ClonesRenderer.hpp  JoystickRenderer.hpp  LevelBackgroundRenderer.hpp  PlayerRenderer.hpp  Renderer.hpp
Bre/app/jni/src/view/utils/: SDL_Utils.hpp
Bre/app/src/main/: AndroidManifest.xml
Bre/app/src/main/res/values/: colors.xml  strings.xml
android-sorce-code/: local.properties
android-source-code/: local.properties
android-source-code/app/src/main/: AndroidManifest.xml
(+6 files in other folders)
